返回逻辑修改

--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -429,6 +429,10 @@
             $("#editorText .backToMain").click();
             return false;
         }
+        if($("#pages-scroll").hasClass("pages-big")  && $("#main").css("display") == "block") {
+            $("#toggleCat").click();
+            return false;
+        }
         WisapeEditer.SaveStory();
     }
 </script>
