--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -28,6 +28,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
         android:inputType="text"
+        android:text="1977979333@qq.com"
         app:action="@drawable/icon_edit_clear_selector"
         app:edit_background="@drawable/sign_up_edit_bg_normal"
         app:edit_height="40dp"
@@ -52,6 +53,7 @@
         android:layout_marginRight="20dp"
         android:layout_marginStart="20dp"
         android:inputType="textPassword"
+        android:text="123456"
         app:action="@drawable/password_visibility_selector"
         app:edit_background="@drawable/sign_up_edit_bg_normal"
         app:edit_height="40dp"
