--- a/app/src/main/res/layout/activity_story_release.xml
+++ b/app/src/main/res/layout/activity_story_release.xml
@@ -6,7 +6,8 @@
     android:paddingEnd="24dp"
     android:paddingLeft="24dp"
     android:paddingRight="24dp"
-    android:paddingStart="24dp">
+    android:paddingStart="24dp"
+    android:scrollbars="none">
 
     <LinearLayout
         android:layout_width="match_parent"
