--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_gravity="center">
-    <ImageView
+    <com.bugtags.library.ui.rounded.CircleImageView
         android:id="@+id/sdv_user_head_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
