default story  and  imsave

--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -451,7 +451,7 @@
             }
         });
         WisapeEditer.logger("销毁保存",WisapeEditer.storyData);
-        WisapeEiter.GetNativeData("isave", [retImg[0],retHtml, retImg], function () {
+        WisapeEditer.GetNativeData("isave", [retImg[0],retHtml, retImg], function () {
         })
     }
 
