--- a/app/src/main/assets/www/views/footer.html
+++ b/app/src/main/assets/www/views/footer.html
@@ -5,6 +5,27 @@
 <div id="publish" class="icon-publish-circle" style="position: fixed;right:10px;bottom:20px;z-index: 999">
 </div>
 
+<!--<script type="text/javascript">-->
+    <!--function ImSave(){-->
+        <!--var pageScroll = $("body");-->
+        <!--var retHtml = '', retImg = [];-->
+        <!--for (var i = 0; i < WisapeEditer.storyData.length; i++) {-->
+            <!--retHtml += '<section class="m-page hide pages-item" > <div class="m-img" >' + WisapeEditer.storyData[i].replace("file://","") + '</div> </section>';-->
+        <!--}-->
+        <!--pageScroll.find(".pages-img").each(function () {-->
+            <!--var me = $(this);-->
+            <!--if (me.hasClass("pages-img-bg")) {-->
+                <!--retImg.push((me.css("background-image").split("url(")[1].split(")")[0]+"").replace("file://",""));-->
+            <!--} else {-->
+                <!--retImg.push(me.find("img").attr("src").replace("file://",""));-->
+            <!--}-->
+        <!--});-->
+        <!--WisapeEditer.logger("销毁保存",WisapeEditer.storyData);-->
+        <!--WisapeEditer.GetNativeData("isave", [retImg[0],retHtml, retImg], function () {-->
+        <!--})-->
+    <!--}-->
+<!--</script>-->
+
 <script src="file:///android_asset/www/public/js/cordova.js"></script>
 <script src="file:///android_asset/www/public/js/preview.js"></script>
 
