屏蔽不要的功能

--- a/app/src/main/res/layout/fragment_card_gallery.xml
+++ b/app/src/main/res/layout/fragment_card_gallery.xml
@@ -41,7 +41,8 @@
                 android:layout_gravity="left|center"
                 android:layout_marginRight="12dp"
                 android:scaleType="center"
-                android:src="@mipmap/activity" />
+                android:src="@mipmap/activity"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/gift_count"
