--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -53,7 +53,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/menu_item_background_selector"
         android:orientation="horizontal"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
