--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,34 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/sign_up_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/activity_sign_up_bg"
     android:focusableInTouchMode="true"
-    android:focusable="true">
+    android:background="@android:color/white"
+    android:focusable="true"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/sign_up_logo"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
         android:scaleType="center"
-        android:src="@mipmap/icon_login_logo" />
+        android:src="@mipmap/icon_login_logo"
+        android:layout_gravity="center"
+        android:layout_weight="1"/>
 
     <com.wisape.android.widget.SignUpEditText
         android:id="@+id/sign_up_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/sign_up_logo"
         android:layout_marginEnd="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
         android:inputType="text"
-        android:text="1977979333@qq.com"
         app:action="@drawable/icon_edit_clear_selector"
         app:edit_background="@drawable/sign_up_edit_bg_normal"
         app:edit_height="40dp"
@@ -45,15 +42,11 @@
         android:id="@+id/sign_up_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/sign_up_email"
         android:layout_marginEnd="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginStart="20dp"
         android:inputType="textPassword"
-        android:text="123456"
         app:action="@drawable/password_visibility_selector"
         app:edit_background="@drawable/sign_up_edit_bg_normal"
         app:edit_height="40dp"
@@ -69,9 +62,7 @@
     <Button
         android:id="@+id/sign_up_btn"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@+id/sign_up_password"
-        android:layout_centerHorizontal="true"
+        android:layout_height="40dp"
         android:layout_marginEnd="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
@@ -86,52 +77,31 @@
         style="@style/App.TextStyle.Secondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/sign_up_btn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:singleLine="true"
+        android:layout_gravity="center"
         android:text="@string/forget_password" />
 
-    <ImageButton
-        android:id="@+id/sign_up_with_twitter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/sign_up_forget_password"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:background="@android:color/transparent"
-        android:gravity="center"
-        android:scaleType="center"
-        android:visibility="gone"
-        android:src="@drawable/sign_up_with_twitter_selector" />
 
-    <ImageButton
-        android:id="@+id/sign_up_with_facebook"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/sign_up_with_twitter"
-        android:layout_marginEnd="17dp"
-        android:layout_marginRight="20dp"
-        android:layout_toLeftOf="@+id/sign_up_with_twitter"
-        android:layout_toStartOf="@+id/sign_up_with_twitter"
-        android:background="@android:color/transparent"
-        android:gravity="center"
-        android:scaleType="center"
-        android:visibility="gone"
-        android:src="@drawable/sign_up_with_facebook_selector" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2">
+        <TextView
+            android:id="@+id/btn_goto_regist"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/goto_regist"
+            android:text="@string/user_register"
+            android:gravity="center"
+            android:textColor="@color/app_fifth"
+            android:textAllCaps="false"
+            android:layout_gravity="bottom"/>
+    </LinearLayout>
 
-    <ImageButton
-        android:id="@+id/sign_up_with_google_plus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/sign_up_with_twitter"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="17dp"
-        android:layout_toEndOf="@+id/sign_up_with_twitter"
-        android:layout_toRightOf="@+id/sign_up_with_twitter"
-        android:background="@android:color/transparent"
-        android:gravity="center"
-        android:scaleType="center"
-        android:visibility="gone"
-        android:src="@drawable/sign_up_with_google_plus_selector" />
-</RelativeLayout>
+</LinearLayout>
