--- a/app/src/main/assets/www/views/test.html
+++ b/app/src/main/assets/www/views/test.html
@@ -211,7 +211,7 @@
         </div>
     </div>
     <div class="ui-dialog-btns">
-        <a class="ui-btn btn-cancle">Cancle</a>
+        <a class="ui-btn btn-cancle">Cancel</a>
         <a class="ui-btn btn-submit">Confirm</a>
     </div>
 </div>
@@ -238,7 +238,7 @@
 <div class="ui-dialog save-dialog">
     <div class="ui-dialog-title">Save Story</div>
     <div class="ui-dialog-content">
-        Comfirm to save story ？
+        Confirm to save story ？
     </div>
     <div class="ui-dialog-btns">
         <a class="ui-btn btn-cancle" style="float:left;margin-left:0.5rem">Cancel</a>
