--- a/app/src/main/assets/www/public/css/editor_index.css
+++ b/app/src/main/assets/www/public/css/editor_index.css
@@ -279,7 +279,7 @@ a {text-decoration: none;color:inherit;}
 .tpl-page-item-name {font-size:0.6rem;height:1rem;line-height:1rem;overflow:hidden;color:#fff;font-weight:bold;background-color:rgba(0,0,0,0.4);padding:0.07rem 0;text-align: center;position: absolute;bottom:0;width:2.96rem;left:0;}
 .tpl-page-item .icon-download {display:block;width:1rem;height:1rem;position: absolute;bottom:.2rem;right:0.2rem;}
 .tpl-page-item .download-progress-bar { position: absolute; left: 0.1rem; bottom: .2rem;width:2.41rem;}
-.tpl-page-item.active {border:2px solid #52b502;}
+.tpl-page-item.active {border:0.1rem solid #52b502;}
 
 .pages {width:100%;margin:0.444rem 0;position:relative;overflow: hidden;}
 .pages li {width:9.71rem;height:15.24rem;float:left;position: relative;margin-left:1.06rem;opacity: 0.5;-webkit-transform:translate3d(0,0,0);border-radius: 0.2rem;}
@@ -445,9 +445,9 @@ a {text-decoration: none;color:inherit;}
 #editorText .pages {width:14rem;height:22.35rem;margin:2.87rem 1rem 0.5rem 1rem;border-radius:0.2rem;border:#d9d9d9 1px solid;box-shadow: 0 0.08rem 0.4rem rgba(0,0,0,0.15)}
 #editorText .pages .count {display: none}
 .stage-content .stage-content-box {
-    -moz-transform:scale(0.61);
-    -webkit-transform:scale(0.61);
-    -o-transform:scale(0.61);
+    -moz-transform:scale(0.6);
+    -webkit-transform:scale(0.6);
+    -o-transform:scale(0.6);
 }
 .pages-big .stage-content .stage-content-box,#editorText .stage-content-box  {
     -moz-transform:scale(0.875);
