--- a/app/src/main/assets/www/public/css/reset.css
+++ b/app/src/main/assets/www/public/css/reset.css
@@ -183,3 +183,5 @@ ul,li{
     margin: 0;
     padding: 0;
 }
+.clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden}
+.clearfix{*+height:1%;}
